Not bothered about location. Change to Tagadab.

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,7 +1,7 @@
 !!! 5
 %html
   %head
-    %title Pivot Pong #{location} — #{yield :title}
+    %title Tagadab Pool — #{yield :title}
     = stylesheet_link_tag 'reset', 'pong', 'jquery.autocomplete'
     = javascript_include_tag :defaults
     = javascript_include_tag 'jquery.autocomplete', 'jquery.tabs'
@@ -13,7 +13,7 @@
   %body
     #page
       %header
-        %h1 pivot pong #{location.downcase}
+        %h1 Tagadab Pool
         %nav
           = link_to_with_current "Rankings", root_path
           = link_to_with_current "Matches", matches_path
